--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "main" : "server.js"
+  "main" : "server.js",
   "name": "MEAN-basic-boilerplate",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+  "start": "node app.js"
   },
   "dependencies": {
     "express": "3.4.8",
