--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.12",
-    "angular-route": "~1.2.12"
+    "angular-route": "~1.2.12",
     "d3": "~3.4.2"
   }
 }
