--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "mongoose": "~3.8.7"
+    "mongoose": "~3.8.7",
+    "bower" : "~1.2.8"
+  },
+  "scripts": {
+    "postinstall": "./bower install"
   }
 }
