--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "~1.2.12",
     "angular-route": "~1.2.12",
-    "d3": "~3.4.2"
+    "d3": "~3.4.2",
+    "jquery": "~2.1.0"
   }
 }
