--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "angular": "~1.2.12",
     "angular-route": "~1.2.12",
     "d3": "~3.4.2",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "c3": "~0.1.12"
+  },
+  "resolutions": {
+    "d3": "~3.4.2"
   }
 }
