--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-route": "~1.2.12",
     "d3": "~3.4.2",
     "jquery": "~2.1.0",
-    "c3": "~0.1.12"
+    "c3": "~0.1.12",
+    "jquery.localScroll": "~1.3.5"
   },
   "resolutions": {
     "d3": "~3.4.2"
